--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "cookie-session": "^2.0.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "knex": "^2.5.1",
     "nodemon": "^2.0.22",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.11.1",
     "sqlite3": "^5.1.6"
   },
