--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "knex": "^2.5.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
     "passport": "^0.5.3",
     "passport-google-oauth2": "^0.2.0",
     "pg": "^8.11.1",
+    "redis": "^4.6.10",
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
