--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "knex": "^2.5.1",
     "multer": "^1.4.5-lts.1",
+    "node-base64-image": "^2.0.5",
     "nodemon": "^2.0.22",
     "passport": "^0.5.3",
     "passport-google-oauth2": "^0.2.0",
